--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 					</p>
 					<button class="btn btn-default">通过GitHub登录</button>
 					<div>
-						<button class="btn btn-default" ui-sref='/topics/index'>进入</button>
+						<div class="btn btn-default" ui-sref='/topics/index'>进入</div>
 					</div>
 					<div>
 						<button class="btn btn-default" ui-sref='/topics/topicslist'>进入1</button>
